<resources>
    <string name="app_name">GPSMobileTracking</string>
    <string name="action_settings">Settings</string>
    <string name="release">OK</string>
    <string name="Username">Username</string>
    <string name="pswd">Password</string>
    <string name="signin">Signin</string>
    <string name="welcome">Welcome  </string>
    <string name="aboutus">About us</string>
    <string name="contactus">Contact us</string>
    <string name="callus">Call us</string>
    <string name="feedbak">FeedBack</string>
    <string name="signout">Signout</string>
    <string name="ariel">Ariel</string>
    <string name="satellite">Satellite</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="orgname">Organization Name</string>
    <string name="mobnumb">Mobile Number</string>
    <string name="addrs">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="info">INFO!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
     <string-array name="nav_drawer_items">
        <item >Live Track</item>
        <item >Tracking History</item>
        <item >Alert Message</item>
         <item >Dashboard</item>
       
    </string-array>
     <string-array name="nav_drawer_items1">
          <item >Tracking History</item>
        <item >Live Track</item>
        <item >Alert Message</item>
         <item >Dashboard</item>
       
    </string-array>
     <string-array name="nav_drawer_items2">
          <item >Alert Message</item>
        <item >Live Track</item>
        <item >Tracking History</item>
         <item >Dashboard</item>
       
       
    </string-array>
    <string name="vehicleno">Vehicle No</string>
    <string name="lastupdate">Last Updated</string>
    <string name="curloc">Current Location</string>
    <string name="curspeed">Current Speed(km/hr)</string>
    <string name="aboutusfirst">Deemgps tracking systems offer the best way for schools, colleges and other businesses to have real-time information about the location and use of their vehicles and other assets. Schools, colleges and businesses can save money on fuel, cell-phone bills and other operational costs, increase productivity, and prevent loss or theft of vehicles and precious assets.</string>
    <string name="oudevice">Our devices:</string>
    <string name="ourdevice1">DGPS507B &amp; DGPS504 Vehicle Tracker</string>
    <string name="ourdevice2">DGPS502 Personal Tracker</string>
    <string name="ourdevice3">DGPS501 Watch Tracker</string>
    <string name="websit">Website :</string>
    <string name="weblink"><u>www.mygps.technology</u></string>
    <string name="version">Application Version: 1.0</string>
    <string name="helpsup">Help/Support: </string>
    <string name="emailidd"><u>support@deemsysinc.com</u></string>
    <string name="addressdeem">Plot No-21,152/33</string>
    <string name="usdeem">800 Cross Pointe road</string>
    <string name="devby">Designed &amp; Developed by</string>
    <string name="deemname">Deemsys Inc</string>
    <string name="copyright">Copyrights 2014 Deemsysinc.com</string>
    <string name="addrs2">Kailash Nagar 1st street,</string>
    <string name="addrs3">Perumbakkam,</string>
    <string name="addrs4">Tel: +91-9841122989</string>
    <string name="addrs1">Manoharan Flats,</string>
    <string name="addrs5">Chennai-600100.</string>
    <string name="deemus">OH 43230</string>
    <string name="deemus0">Tel: 614-322-9928</string>
    <string name="deemus1">Fax: 614-322-9945</string>
    <string name="deemus5">Suite A Gahanna,</string>
    <string name="deemsysaddresss">Offshore Office</string>
    <string name="headoffice">Head Office</string>
    <string name="deemgpsreturn">Deem GPS Return Policy</string>
    <string name="deemgpsreturnstate">You will need a Return Authorization (RA) number prior to shipping your product to DEEM GPS for repair. Please contact our technical support group by calling or emailing us. Click Here for Contact Information.</string>
    <string name="deemgpsrefund">Deem GPS Refund Policy</string>
    <string name="deemgpsrefundstate">The DEEM GPS Return/Refund Policy only applies to hardware and software goods purchased from the DEEM GPS website or a telephone order. Other products such as map downloads, subscriptions, and opened software programs are not refundable. In order to return an item for refund you will need a Return Authorization. Please contact DEEM GPS by phone or email to obtain a Return Authorization.</string>
    <string name="deemgpsrefundstate1">We accept returns of devices and accessories within 7 days of purchase.</string>
    <string name="deemgpswaranty">DEEM GPS Warranty &amp; Replacement Policy</string>
    <string name="warantyrepair">In-Warranty Repairs</string>
    <string name="warantyrepair1">All Deem GPS products are warranted to be free from defects in materials or workmanship for:</string>
    <string name="warantyrepair2">● 1 month from the date of purchase for new GPS receivers</string>
    <string name="warantyrepair3">● 1 month  from the date of purchase for reconditioned GPS receivers</string>
    <string name="warantyrepair4">● The greater of 1 month or the remainder of the original warranty for GPS receivers exchanged by Deem GPS as part of in-warranty servicing.</string>
    <string name="warantyrepair5">Deem GPS as part of in-warranty servicing.</string>
    <string name="proofofpurchase">In-warranty Services require a valid Proof-of Purchase.</string>
    <string name="proofofpurchase1">If returned within the applicable warranty period, Deem GPS will, at its sole discretion and at no cost to the customer, replace the defective GPS receiver with a reconditioned unit of the same model, as available. If the same model is not available, a different reconditioned model GPS receiver will be used for the exchange.
This warranty does not cover failures due to abuse, misuse, accident or unauthorized alterations or repairs.</string>
    <string name="outofwaranty">Out of Warranty Repairs</string>
    <string name="privacypolicy">By submitting your personal information through Leadtek Research Inc. (“LEDATEK")'s website, you hereby give your consent to the handling of your personal data in the manner described in this statement.
This privacy statement is to inform you of our online information practiced and the choices available regarding the collection and use of your personal information via this website.
You acknowledge and agree that this statement has the same effect as a written consent. By accessing or using this website or providing information to LEADTEK through this website, you acknowledge that you have reviewed the content of this statement and consent to the practices described in this statement.Except this statement, LEADTEK might provide different or additional information or terms for specific products, discounts, areas, services, or activities.</string>
    <string name="useof">Use of your Personal Information </string>
    <string name="collection">Collection of Personal Information:</string>
    <string name="thisprivacy">This privacy statement is to inform you of our online information practiced and the choices available regarding the collection and use of your personal information via this website.</string>
    <string name="youack">You acknowledge and agree that this statement has the same effect as a written consent. By accessing or using this website or providing information to DEEM GPS through this website, you acknowledge that you have reviewed the content of this statement and consent to the practices described in this statement.</string>
    <string name="except">Except this statement, DEEM GPS might provide different or additional information or terms for specific products, discounts, areas, services, or activities.</string>
    <string name="storage">Storage of Personal Information: </string>
    <string name="wemay">We may hold and process your Personal Information in your home country or overseas, and on our own information technology systems or on systems owned by third parties that may hold and process your Personal Information on our behalf.  The DEEM GPS entity that holds your Personal Information is the entity set out in the Contact Details section applicable to the country in which you acquired the relevant product or Service.</string>
    <string name="weuse">We Use Cookies</string>
    <string name="someof">Some of our web pages utilize "cookies" and other tracking technologies. A "cookie" is a small text file that may be used to collect information about web site activity. Some cookies and other technologies may recall personal information previously provided by a web user. Most browsers allow you to control cookies, including whether or not to accept them and how to remove them. You may set most browsers to notify you if you receive a cookie or you may choose to block cookies with your browser. Tracking technologies record information such as Internet domain and host names; Internet protocol (IP) addresses; browser software and operating system types; clickstream patterns; and dates and times that our site is accessed. We use cookies and other tracking technologies so that we can improve our web site and your web experience. We may also analyze information for trends and statistics. We do not generate e-mail lists from cookies.</string>
    <string name="howwe">How We Secure Your Information</string>
    <string name="wherever">Wherever your information may be held within DEEM GPS or on its behalf, we intend to take reasonable and appropriate steps to protect the personal information that you share with us from unauthorized access or disclosure. We use firewalls, encryption technologies (such as SSL) and physical security measures in order to prevent unauthorized use of personal information. </string>
    <string name="access">Access and correction of Personal Information</string>
    <string name="youhave">You have the right to access and correct the Personal Information that we keep about you.  To do so, please contact us in writing at the address below.</string>
    <string name="ifyou">If you think we have breached applicable privacy laws, please write to us at the address below.  We will investigate any complaint and will notify you of the making of a decision in relation to your complaint as soon as is practicable after it has been made.</string>
    <string name="thirdparty">Third Party Websites </string>
    <string name="linkson">Links on our websites or accessible through our other Services to websites that are operated by third parties are provided solely as a convenience to you. If you use these links, you will leave our website or other Service. DEEM GPS has not reviewed all of these third-party sites and does not control and is not responsible for any of these sites or their content. Thus, DEEM GPS does not endorse or make any representations about them, or any information, software or other products or materials found there, or any results that may be obtained from using them. If you decide to access any third-party websites, you do this entirely at your own risk.</string>
    <string name="changesto">Changes to this Privacy Policy  </string>
    <string name="wereserve">We reserve the right to change and update this Privacy Policy at any time. Any such changes will be posted at this website. The date of the latest update to the Privacy Policy is set out at the top of the Privacy Policy. Changes to the Privacy Policy are effective at the time they are posted to this website, and your continued use of a Service shall signify your acceptance of, and agreement to be bound by, those changes.  We recommend you check this website regularly for changes to the Privacy Policy.</string>
</resources>