<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
      android:id="@+id/layoutt"
    android:layout_height="fill_parent"
  android:background = "@drawable/contactus"
   
    android:orientation="vertical" >

    <EditText
        android:id="@+id/e2"
        style="@style/custom"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:singleLine = "true"
        android:maxLines = "1"
        android:lines = "1"
        android:hint="@string/lastname"
        android:padding="5dip" />

    <EditText
        android:id="@+id/e3"
        style="@style/custom"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="195dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:singleLine = "true"
        android:maxLines = "1"
        android:lines = "1"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="5dip" />

    <EditText
        android:id="@+id/e4"
        style="@style/custom"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="230dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:singleLine = "true"
        android:maxLines = "1"
        android:lines = "1"
        android:hint="@string/orgname"
        android:padding="5dip" />

    <EditText
        android:id="@+id/e5"
        style="@style/custom"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="265dp"
        android:singleLine = "true"
        android:maxLines = "1"
        android:lines = "1"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/mobnumb"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="5dip" />

    <EditText
        android:id="@+id/e6"
        style="@style/custom"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/addrs"
        android:maxLines="5"
        android:padding="5dip"
        android:textSize="14dip" />

    <EditText
        android:id="@+id/e8"
        style="@style/custom"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="355dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:singleLine = "true"
        android:maxLines = "1"
        android:lines = "1"
        android:hint="@string/city"
        android:padding="5dip" />

    <EditText
        android:id="@+id/e9"
        style="@style/custom"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="390dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:singleLine = "true"
        android:maxLines = "1"
        android:lines = "1"
        android:hint="@string/state"
        android:padding="5dip" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="false"
            android:layout_alignParentTop="false"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="435dp"
            android:background="@drawable/resetbutton" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="435dp"
            android:background="@drawable/contact2" />

    <EditText
        android:id="@+id/e1"
        style="@style/custom"
        android:layout_width="250dp"
        android:singleLine = "true"
        
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/firstname"
        android:padding="5dip" >

        <requestFocus />
    </EditText>

</RelativeLayout>